Upgrade phonegap version

--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,20 @@ node_modules/mongodb/node_modules/kerberos/test/win32/security_buffer_tests.js
 node_modules/mongodb/node_modules/kerberos/test/win32/security_credentials_tests.js
 node_modules/mongodb/package.json
 node_modules/mongodb/t.js
+edit/backup/meetingCost.sql
+edit/color_spectrum.png
+edit/colores.PNG
+edit/design/exported/01 - meeting-cost-landing.png
+edit/design/exported/02 - meeting-cost-create-attenders.png
+edit/design/exported/02b - meeting-cost-create-rate.png
+edit/design/exported/02c - meeting-cost-create-time.png
+edit/design/exported/03 - meeting-cost-real-time.png
+edit/design/exported/04 - meeting-cost-listb.jpg
+edit/design/exported/05 - meeting-cost-about-us.png
+edit/design/sp.fw.png
+edit/docs/meeting-cost.txt
+edit/logo/metronome.PNG
+edit/logo/metronome_speed.ai
+edit/logo/metronome_speed.fw.png
+edit/meeting-cost-v2.fw.png
+edit/meeting-cost.fw.png
